Use semantic tags

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <!--[if lt IE 8]><p class=browserupgrade>You are using an <strong>outdated</strong> browser. Please <a href=http://browsehappy.com/ >upgrade your browser</a> to improve your experience.<![endif]-->
-    <div id=header>
+    <header>
         <h1>Beau Dobbin</h1>
         <div class=left>
             <h2>I do:</h2>
@@ -61,9 +61,9 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div id=content>
-        <div class=section>
+    </header>
+    <main>
+        <section>
             <div class=section_title>
                 <div class=title>Coursera</div>
                 <div class=sub>Mentor</div>
@@ -77,9 +77,10 @@
                 <p>I am a Mentor for
                     <a href=https://www.coursera.org/learn/algorithms-part1/>Algorithms, Part I</a>, created by
                     <i>Princeton University</i>. I answer students' questions on the discussion forums. It's one of
-                    <a href=http://www.onlinecoursereport.com/the-50-most-popular-moocs-of-all-time/>the most popular MOOCs</a>.</div>
-        </div>
-        <div class=section>
+                    <a href=http://www.onlinecoursereport.com/the-50-most-popular-moocs-of-all-time/>the most popular MOOCs</a>.</p>
+            </div>
+        </section>
+        <section>
             <div class=section_title>
                 <div class=title>M's English School</div>
                 <div class=sub>English Teacher</div>
@@ -95,18 +96,18 @@
             <div class=section_content>
                 <p>I am an English teacher at
                     <a href=http://www.emz-english.info>M's English School</a>, a private English conversation school in Takasaki, Gunma, Japan. I have taught
-                    students of all ages, from pre-verbal children to retired senior citizens.
-                    <p>Some of my projects have included:
-                        <ul>
-                            <li>Creating educational CDs to accompany our published textbooks. See
-                                <a href=http://beaunussound.com/>beaunussound.com</a> for examples.</li>
-                            <li>Developing some administrative processes to allow concurrent users and easy distribution of information.</li>
-                            <li>Developing materials for various age groups and skill levels.</li>
-                            <li>Editing scientific writing for publication.</li>
-                        </ul>
+                    students of all ages, from pre-verbal children to retired senior citizens.</p>
+                <p>Some of my projects have included:</p>
+                <ul>
+                    <li>Creating educational CDs to accompany our published textbooks. See
+                        <a href=http://beaunussound.com/>beaunussound.com</a> for examples.</li>
+                    <li>Developing some administrative processes to allow concurrent users and easy distribution of information.</li>
+                    <li>Developing materials for various age groups and skill levels.</li>
+                    <li>Editing scientific writing for publication.</li>
+                </ul>
             </div>
-        </div>
-        <div class=section>
+        </section>
+        <section>
             <div class=section_title>
                 <div class=title>Beaunus Sound</div>
                 <div class=sub>President</div>
@@ -128,8 +129,8 @@
                     <a href=https://github.com/beaunus/ReaScripts/tree/master/Various/beaunus_clip_splicer>REAPER script</a> to make CDs at
                     <i>M's English School</i>.</p>
             </div>
-        </div>
-        <div class=section>
+        </section>
+        <section>
             <div class=section_title>
                 <div class=title>Gasan Elementary School</div>
                 <div class=sub>English Teacher</div>
@@ -142,15 +143,15 @@
             </div>
             <div class=section_content>
                 <p>I was an English teacher at
-                    <a href=http://pusangasan.es.kr/> Gasan Elementary School</a> in Busan, South Korea. I taught students from age 6 to 12.</p>
+                    <a href=http://pusangasan.es.kr/>Gasan Elementary School</a> in Busan, South Korea. I taught students from age 6 to 12.</p>
                 <p>Some of my projects included:</p>
                 <ul>
                     <li>Broadcasting a weekly closed-circuit reading practice television show.</li>
                     <li>Arranging and recording the students performing the school's song.</li>
                 </ul>
             </div>
-        </div>
-        <div class=section>
+        </section>
+        <section>
             <div class=section_title>
                 <div class=title>The Redcoats</div>
                 <div class=sub>Member</div>
@@ -164,8 +165,8 @@
                 <p>After Second Shift finished, some of the members, along with one new member, started a new band called
                     <i>The Redcoats</i>. We played some new songs and old songs in new ways.</p>
             </div>
-        </div>
-        <div class=section>
+        </section>
+        <section>
             <div class=section_title>
                 <div class=title>Camp Jam</div>
                 <div class=sub>Musical Director</div>
@@ -182,8 +183,8 @@
                     <a href=http://campjam.com/>Camp Jam</a>in Atlanta, Georgia. I was the Director for 1 year and the Audio Engineer for 2 years. I
                     taught students from age 11 to 17.</p>
             </div>
-        </div>
-        <div class=section>
+        </section>
+        <section>
             <div class=section_title>
                 <div class=title>In The Red</div>
                 <div class=sub>Partner</div>
@@ -198,8 +199,8 @@
                 <p>For a few years, I was a partner in a recording company called
                     <i>In The Red Productions</i>. We produced studio ensemble, vocal, and live band recordings.</p>
             </div>
-        </div>
-        <div class=section>
+        </section>
+        <section>
             <div class=section_title>
                 <div class=title>Second Shift</div>
                 <div class=sub>Member</div>
@@ -224,8 +225,8 @@
                     <a href=http://www.secondshiftmusic.com>secondshiftmusic.com</a>
                 </p>
             </div>
-        </div>
-        <div class=section>
+        </section>
+        <section>
             <div class=section_title>
                 <div class=title>Interland</div>
                 <div class=sub>Web Designer</div>
@@ -240,16 +241,14 @@
                     were:
                 </p>
                 <ul>
-                    <li>Guiding customers through product design, content creation, revisions, implementation, and web-site deployment.
-                    </li>
+                    <li>Guiding customers through product design, content creation, revisions, implementation, and web-site deployment.</li>
                     <li>Managing up to 15 accounts at a time.</li>
-                    <li>Working with artwork and programming staff to satisfy customers’ individual needs. (HTML, CSS)
-                    </li>
+                    <li>Working with artwork and programming staff to satisfy customers’ individual needs. (HTML, CSS)</li>
                     <li>Creating custom spreadsheets to prioritize tasks and manage deadlines. (Microsoft Excel)</li>
                 </ul>
             </div>
-        </div>
-        <div class=section>
+        </section>
+        <section>
             <div class=section_title>
                 <div class=title>Intelliworks</div>
                 <div class=sub>Programmer</div>
@@ -266,8 +265,8 @@
                     <li>Writing user interfaces for database driven web applications.</li>
                 </ul>
             </div>
-        </div>
-        <div class=section>
+        </section>
+        <section>
             <div class=section_title>
                 <div class=title>UGA Drumline</div>
                 <div class=sub>Member</div>
@@ -282,8 +281,8 @@
                     tens of thousands of people each weekend. Throughout the course of the year, we performed 3 different
                     halftime shows.</p>
             </div>
-        </div>
-        <div class=section>
+        </section>
+        <section>
             <div class=section_title>
                 <div class=title>CHHS Drumline</div>
                 <div class=sub>Member</div>
@@ -298,15 +297,15 @@
                     section leader. Our drumline won many state-wide awards during the time that I was there. Mostly thanks
                     to our brilliant band directors.</p>
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
     <script src=js/plugins.js></script>
     <script src=js/main.js></script>
     <script>
         ! function (e, a, t, n, g, c, o) {
-            e.GoogleAnalyticsObject = g, e.ga = e.ga || function () {
+            e.GoogleAnalyticsObject = "ga", e.ga = e.ga || function () {
                     (e.ga.q = e.ga.q || []).push(arguments)
                 }, e.ga.l = 1 * new Date, c = a.createElement(t), o = a.getElementsByTagName(t)[0], c.async = 1, c.src =
                 "https://www.google-analytics.com/analytics.js", o.parentNode.insertBefore(c, o)
-        }(window, document, "script", 0, "ga"), ga("create", "UA-48129888-1", "auto"), ga("send", "pageview")
+        }(window, document, "script"), ga("create", "UA-48129888-1", "auto"), ga("send", "pageview")
     </script>
