--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
       <div class=section_title>
         <div class=title>Coursera</div>
         <div class=sub>Mentor</div>
-        <div class=desc>2016 NOV - PRESENT</div>
+        <div class=desc>2016 - 2018</div>
         <div class=desc>
           <i aria-hidden=true class="fa fa-code"></i>
           <i aria-hidden=true class="fa fa-handshake-o"></i>
         </div>
       </div>
       <div class=section_content>
-        <p>I am a Mentor for
+        <p>I was a Mentor for
           <a href=https://www.coursera.org/learn/algorithms-part1/>Algorithms, Part I</a>, created by
-          <i>Princeton University</i>. I answer students' questions on the discussion forums. It's one of
+          <i>Princeton University</i>. I answered students' questions on the discussion forums. It's one of
           <a href=http://www.onlinecoursereport.com/the-50-most-popular-moocs-of-all-time/>the most popular MOOCs</a>.</p>
       </div>
     </section>
@@ -75,7 +75,7 @@
         <div class=title>M's English School</div>
         <div class=sub>English Teacher</div>
         <div class=sub>Head of Technology</div>
-        <div class=desc>2012 - PRESENT</div>
+        <div class=desc>2012 - 2018</div>
         <div class=desc>
           <i aria-hidden=true class="fa fa-code"></i>
           <i aria-hidden=true class="fa fa-handshake-o"></i>
@@ -84,10 +84,10 @@
         </div>
       </div>
       <div class=section_content>
-        <p>I am an English teacher at
+        <p>I was an English teacher at
           <a href=http://www.emz-english.info>M's English School</a>, a private English conversation school in Takasaki, Gunma, Japan. I have taught students
           of all ages, from pre-verbal children to retired senior citizens.</p>
-        <p>Some of my projects have included:</p>
+        <p>Some of my projects included:</p>
         <ul>
           <li>Creating educational CDs to accompany our published textbooks. See
             <a href=http://beaunussound.com/>beaunussound.com</a> for examples.</li>
