--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class=right>
       <img alt="A picture of Beau Dobbin." class=right src=img/beaunus_mug_shot.png>
       <div class=right>
-        <div>Japan, Gunma
+        <div>Japan
           <i aria-hidden=true class="fa fa-globe"></i>
         </div>
         <div>
