--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href=apple-touch-icon.png rel=apple-touch-icon>
 <link href=css/normalize.css rel=stylesheet>
 <link href=css/main.css rel=stylesheet>
-<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel=stylesheet>
+<link href="https://fonts.googleapis.com/css?family=Nunito" rel=stylesheet>
 <link href=lib/font-awesome-4.7.0/css/font-awesome.min.css rel=stylesheet>
 <script src=js/vendor/modernizr-2.8.3.min.js></script>
 
