Add Code Chrysalis section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,32 @@
   <main>
     <section>
       <div class=section_title>
+        <div class=title>Code Chrysalis</div>
+        <div class=sub>Software Engineering Student</div>
+        <div class=desc>2018</div>
+        <div class=desc>
+          <i aria-hidden=true class="fa fa-code"></i>
+          <i aria-hidden=true class="fa fa-handshake-o"></i>
+        </div>
+      </div>
+      <div class=section_content>
+        <p>
+          I recently finished a 12-week immersive advanced software engineering school in Tokyo, Japan, called
+          <a href="https://www.codechrysalis.io/">Code Chrysalis</a>. Some of the work that I did there can be found on
+          <a href="https://github.com/beaunus/">my GitHub page</a>. Besides that, I did some other cool things, like this:
+          <ul>
+            <li>Presented 2 projects to an audience of 60 people at the school's Demo Day @
+              <a href="https://pivotal.io/locations/tokyo">Pivotal Labs Tokyo</a>.</li>
+            <li>Developing a public lecture about "An Introduction to Cryptography".</li>
+            <li>Designed and presented a public lecture about "Getting Started with AWS".</li>
+            <li>Contributed test cases and instructions for school assignment repositories.</li>
+            <li>Regularly led discussions of algorithmic problem solving techniques.</li>
+          </ul>
+        </p>
+      </div>
+    </section>
+    <section>
+      <div class=section_title>
         <div class=title>Coursera</div>
         <div class=sub>Mentor</div>
         <div class=desc>2016 - 2018</div>
