--- a/index.html
+++ b/index.html
@@ -20,397 +20,106 @@
   <body>
     <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" >upgrade your browser</a> to improve your experience.<![endif]-->
     <header>
-      <h1>Beau Dobbin</h1>
-      <div class="left">
-        <h2>I do:</h2>
-        <h2><i aria-hidden="true" class="fa fa-code"></i>Code</h2>
-        <h2><i aria-hidden="true" class="fa fa-handshake-o"></i>Education</h2>
-        <h2><i aria-hidden="true" class="fa fa-music"></i>Music</h2>
-        <h2>
-          <i aria-hidden="true" class="fa fa-headphones"></i>Audio Engineering
-        </h2>
-      </div>
-      <div class="right">
-        <img
-          alt="A picture of Beau Dobbin."
-          class="right"
-          src="img/beaunus_mug_shot.png"
-        />
-        <div class="right">
-          <div>Japan <i aria-hidden="true" class="fa fa-globe"></i></div>
-          <div>
-            <a href="mailto:beau@beaunus.com">beau@beaunus.com</a>
-            <i aria-hidden="true" class="fa fa-envelope-o"></i>
-          </div>
-          <div>
-            <a href="https://www.linkedin.com/in/beaunus">beaunus</a>
-            <i aria-hidden="true" class="fa fa-linkedin-square"></i>
-          </div>
-          <div>
-            <a href="https://www.beaunus.com">beaunus.com</a>
-            <i aria-hidden="true" class="fa fa-home"></i>
-          </div>
-          <div>
-            <a href="https://github.com/beaunus">beaunus</a>
-            <i aria-hidden="true" class="fa fa-github"></i>
-          </div>
-        </div>
-      </div>
+      <img src="img/beaunus_logo_pixels.png" id="logo" />
     </header>
-    <main>
-      <section>
-        <div class="section_title">
-          <div class="title">Code Chrysalis</div>
-          <div class="sub">Software Engineering Student</div>
-          <div class="desc">2018</div>
-          <div class="desc">
-            <i aria-hidden="true" class="fa fa-code"></i>
-            <i aria-hidden="true" class="fa fa-handshake-o"></i>
-          </div>
+    <div>
+      <img src="img/beau-dobbin-photo.jpg" id="profile-photo" />
+      <h3>Beau Dobbin</h3>
+      <h4>Software Engineer</h4>
+      <div class="logos">
+        <div>
+          <i aria-hidden="true" class="fa fa-code"></i><span>Code</span>
         </div>
-        <div class="section_content">
-          <p>
-            I recently finished a 12-week immersive advanced software
-            engineering school in Tokyo, Japan, called
-            <a href="https://www.codechrysalis.io">Code Chrysalis</a>. Some of
-            the work that I did there can be found on
-            <a href="https://github.com/beaunus">my GitHub page</a>. Besides
-            that, I did some other cool things, like this:
-          </p>
-          <ul>
-            <li>
-              Presented 2 projects to an audience of 60 people at the school's
-              Demo Day @
-              <a href="https://pivotal.io/locations/tokyo">Pivotal Labs Tokyo</a
-              >.
-            </li>
-            <li>
-              Developing a public lecture about "An Introduction to
-              Cryptography".
-            </li>
-            <li>
-              Designed and presented a public lecture about "Getting Started
-              with AWS".
-            </li>
-            <li>
-              Contributed test cases and instructions for school assignment
-              repositories.
-            </li>
-            <li>
-              Regularly led discussions of algorithmic problem solving
-              techniques.
-            </li>
-          </ul>
+        <div>
+          <i aria-hidden="true" class="fa fa-handshake-o"></i
+          ><span>Education</span>
         </div>
-      </section>
-      <section>
-        <div class="section_title">
-          <div class="title">Coursera</div>
-          <div class="sub">Mentor</div>
-          <div class="desc">2016 - 2018</div>
-          <div class="desc">
-            <i aria-hidden="true" class="fa fa-code"></i>
-            <i aria-hidden="true" class="fa fa-handshake-o"></i>
-          </div>
+        <div>
+          <i aria-hidden="true" class="fa fa-music"></i><span>Music</span>
         </div>
-        <div class="section_content">
-          <p>
-            I was a Mentor for
-            <a href="https://www.coursera.org/learn/algorithms-part1"
-              >Algorithms, Part I</a
-            >, created by <i>Princeton University</i>. I answered students'
-            questions on the discussion forums. It's one of
-            <a
-              href="http://www.onlinecoursereport.com/the-50-most-popular-moocs-of-all-time"
-              >the most popular MOOCs</a
-            >.
-          </p>
+        <div>
+          <i aria-hidden="true" class="fa fa-headphones"></i
+          ><span>Audio Engineering</span>
         </div>
-      </section>
-      <section>
-        <div class="section_title">
-          <div class="title">M's English School</div>
-          <div class="sub">English Teacher</div>
-          <div class="sub">Head of Technology</div>
-          <div class="desc">2012 - 2018</div>
-          <div class="desc">
-            <i aria-hidden="true" class="fa fa-code"></i>
-            <i aria-hidden="true" class="fa fa-handshake-o"></i>
-            <i aria-hidden="true" class="fa fa-music"></i>
-            <i aria-hidden="true" class="fa fa-headphones"></i>
-          </div>
-        </div>
-        <div class="section_content">
-          <p>
-            I was an English teacher at
-            <a href="http://www.emz-english.info">M's English School</a>, a
-            private English conversation school in Takasaki, Gunma, Japan. I
-            have taught students of all ages, from pre-verbal children to
-            retired senior citizens.
-          </p>
-          <p>Some of my projects included:</p>
-          <ul>
-            <li>
-              Creating educational CDs to accompany our published textbooks. See
-              <a href="http://beaunussound.com">beaunussound.com</a> for
-              examples.
-            </li>
-            <li>
-              Developing some administrative processes to allow concurrent users
-              and easy distribution of information.
-            </li>
-            <li>
-              Developing materials for various age groups and skill levels.
-            </li>
-            <li>Editing scientific writing for publication.</li>
-          </ul>
-        </div>
-      </section>
-      <section>
-        <div class="section_title">
-          <div class="title">Beaunus Sound</div>
-          <div class="sub">President</div>
-          <div class="sub">Audio Engineer</div>
-          <div class="desc">1996 - PRESENT</div>
-          <div class="desc">
-            <i aria-hidden="true" class="fa fa-code"></i>
-            <i aria-hidden="true" class="fa fa-music"></i>
-            <i aria-hidden="true" class="fa fa-headphones"></i>
-          </div>
-        </div>
-        <div class="section_content">
-          <p>
-            Since I first got a 4-track tape recorder in high school, I have
-            been supremely interested in audio recording. I have experience with
-            songwriting, production, and manufacturing. I write software to
-            automate some technical processes.
-          </p>
-          <p>
-            Some of my work can be seen at
-            <a href="http://www.beaunussound.com">beaunussound.com</a>.
-          </p>
-          <p>
-            I wrote a
-            <a
-              href="https://github.com/beaunus/ReaScripts/tree/master/Various/beaunus_clip_splicer"
-              >REAPER script</a
-            >
-            to make CDs at <i>M's English School</i>.
-          </p>
-        </div>
-      </section>
-      <section>
-        <div class="section_title">
-          <div class="title">Gasan Elementary School</div>
-          <div class="sub">English Teacher</div>
-          <div class="desc">2009 - 2012</div>
-          <div class="desc">
-            <i aria-hidden="true" class="fa fa-handshake-o"></i>
-            <i aria-hidden="true" class="fa fa-music"></i>
-            <i aria-hidden="true" class="fa fa-headphones"></i>
-          </div>
-        </div>
-        <div class="section_content">
-          <p>
-            I was an English teacher at
-            <a href="http://pusangasan.es.kr">Gasan Elementary School</a> in
-            Busan, South Korea. I taught students from age 6 to 12.
-          </p>
-          <p>Some of my projects included:</p>
-          <ul>
-            <li>
-              Broadcasting a weekly closed-circuit reading practice television
-              show.
-            </li>
-            <li>
-              Arranging and recording the students performing the school's song.
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section>
-        <div class="section_title">
-          <div class="title">The Redcoats</div>
-          <div class="sub">Member</div>
-          <div class="desc">2007 - 2009</div>
-          <div class="desc">
-            <i aria-hidden="true" class="fa fa-music"></i>
-            <i aria-hidden="true" class="fa fa-headphones"></i>
-          </div>
-        </div>
-        <div class="section_content">
-          <p>
-            After Second Shift finished, some of the members, along with one new
-            member, started a new band called <i>The Redcoats</i>. We played
-            some new songs and old songs in new ways.
-          </p>
-        </div>
-      </section>
-      <section>
-        <div class="section_title">
-          <div class="title">Camp Jam</div>
-          <div class="sub">Musical Director</div>
-          <div class="sub">Audio Engineer</div>
-          <div class="desc">2007 - 2009</div>
-          <div class="desc">
-            <i aria-hidden="true" class="fa fa-handshake-o"></i>
-            <i aria-hidden="true" class="fa fa-music"></i>
-            <i aria-hidden="true" class="fa fa-headphones"></i>
-          </div>
-        </div>
-        <div class="section_content">
-          <p>
-            From 2007 - 2009, I worked at
-            <a href="http://campjam.com">Camp Jam</a> in Atlanta, Georgia. I was
-            the Director for 1 year and the Audio Engineer for 2 years. I taught
-            students from age 11 to 17.
-          </p>
-        </div>
-      </section>
-      <section>
-        <div class="section_title">
-          <div class="title">In The Red</div>
-          <div class="sub">Partner</div>
-          <div class="sub">Audio Engineer</div>
-          <div class="desc">2006 - 2008</div>
-          <div class="desc">
-            <i aria-hidden="true" class="fa fa-music"></i>
-            <i aria-hidden="true" class="fa fa-headphones"></i>
-          </div>
-        </div>
-        <div class="section_content">
-          <p>
-            For a few years, I was a partner in a recording company called
-            <i>In The Red Productions</i>. We produced studio ensemble, vocal,
-            and live band recordings.
-          </p>
-        </div>
-      </section>
-      <section>
-        <div class="section_title">
-          <div class="title">Second Shift</div>
-          <div class="sub">Member</div>
-          <div class="desc">2000 - 2007</div>
-          <div class="desc">
-            <i aria-hidden="true" class="fa fa-code"></i>
-            <i aria-hidden="true" class="fa fa-music"></i>
-            <i aria-hidden="true" class="fa fa-headphones"></i>
-          </div>
-        </div>
-        <div class="section_content">
-          <p>
-            <i>Second Shift</i> was a band based in Atlanta, GA. We did some
-            really fun things, e.g.:
-          </p>
-          <ul>
-            <li>Opening for Weezer.</li>
-            <li>
-              Hosting a Rock 'n' Roll Circus that featured excellent bands from
-              around the Southeast.
-            </li>
-            <li>Playing at the legendary CBGB music club.</li>
-            <li>
-              Playing on the 99x Locals Only stage at the Music Midtown festival
-              in Atlanta, GA.
-            </li>
-            <li>Playing at the Warped Tour stop in Atlanta, GA.</li>
-          </ul>
-          <p>
-            I engineered many of our self-produced recordings. Our PR company
-            desgined our website. I did the code.
-            <a href="http://www.secondshiftmusic.com">secondshiftmusic.com</a>
-          </p>
-        </div>
-      </section>
-      <section>
-        <div class="section_title">
-          <div class="title">Interland</div>
-          <div class="sub">Web Designer</div>
-          <div class="desc">2005</div>
-          <div class="desc"><i aria-hidden="true" class="fa fa-code"></i></div>
-        </div>
-        <div class="section_content">
-          <p>
-            After my previous company moved to another state, I worked at
-            <i>Interland</i>, a company that created websites for individuals
-            and small companies. My main responsibilities were:
-          </p>
-          <ul>
-            <li>
-              Guiding customers through product design, content creation,
-              revisions, implementation, and web-site deployment.
-            </li>
-            <li>Managing up to 15 accounts at a time.</li>
-            <li>
-              Working with artwork and programming staff to satisfy customers’
-              individual needs. (HTML, CSS)
-            </li>
-            <li>
-              Creating custom spreadsheets to prioritize tasks and manage
-              deadlines. (Microsoft Excel)
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section>
-        <div class="section_title">
-          <div class="title">Intelliworks</div>
-          <div class="sub">Programmer</div>
-          <div class="desc">2005</div>
-          <div class="desc"><i aria-hidden="true" class="fa fa-code"></i></div>
-        </div>
-        <div class="section_content">
-          <p>
-            Shortly after university, I got a programming job at
-            <i>Intelliworks</i>. This is what I worked on:
-          </p>
-          <ul>
-            <li>
-              Programming a Customer Relationship Management system in
-              ColdFusion, SQL, HTML, and CSS.
-            </li>
-            <li>
-              Writing user interfaces for database driven web applications.
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section>
-        <div class="section_title">
-          <div class="title">UGA Drumline</div>
-          <div class="sub">Member</div>
-          <div class="desc">2000</div>
-          <div class="desc"><i aria-hidden="true" class="fa fa-music"></i></div>
-        </div>
-        <div class="section_content">
-          <p>
-            My first year in university, I played 7th bass drum in
-            <a href="http://bands.uga.edu/content/drumline"
-              >The University of Georgia Redcoat Band Drumline</a
-            >. During football season, we performed in front of tens of
-            thousands of people each weekend. Throughout the course of the year,
-            we performed 3 different halftime shows.
-          </p>
-        </div>
-      </section>
-      <section>
-        <div class="section_title">
-          <div class="title">CHHS Drumline</div>
-          <div class="sub">Member</div>
-          <div class="desc">1997 - 2000</div>
-          <div class="desc"><i aria-hidden="true" class="fa fa-music"></i></div>
-        </div>
-        <div class="section_content">
-          <p>
-            I met some of my best friends in the world in the
-            <i>Collins Hill High School</i> marching band. I played bass drum
-            and tenors. For my last two years, I was section leader. Our
-            drumline won many state-wide awards during the time that I was
-            there. Mostly thanks to our brilliant band directors.
-          </p>
-        </div>
-      </section>
-    </main>
+      </div>
+    </div>
+    <section>
+      <div>
+        <img src="img/zehitomo-iphone.png" />
+      </div>
+      <div>
+        <h4>Zehitomo</h4>
+        <h5><a href="https://www.zehitomo.com/">zehitomo.com</a></h5>
+        <p>
+          I'm a full-stack developer at Zehitomo, a local services marketplace
+          that is enabling freelance professionals throughout Japan.
+        </p>
+      </div>
+      <div class="logos">
+        <img src="img/logos/591px-Node.js_logo_2015.svg.png" />
+        <img src="img/logos/TypeScript_Logo_(Blue).svg" />
+        <img src="img/logos/mongodb_logo1-76twgcu2dm.png" />
+        <img src="img/logos/ExpressJS (1).png" />
+        <img src="img/logos/react.png" />
+        <img src="img/logos/AngularJS-large.png" />
+        <img src="img/logos/aws-ecs.png" />
+        <img src="img/logos/Redis_Logo.svg" />
+        <img src="img/logos/sentry-logo-black.png" />
+      </div>
+    </section>
+    <section>
+      <div>
+        <img src="img/logos/code-chrysalis-stickerB.png" />
+      </div>
+      <div>
+        <h4>Code Chrysalis</h4>
+        <h5><a href="https://www.codechrysalis.io/">codechrysalis.io</a></h5>
+        <p>
+          I am a lead instructor and curriculum owner for Job Leap, an
+          algorithms and system design course that prepares experienced software
+          engineers for career advancement.
+        </p>
+        <p>
+          I am also a lead instructor and core curriculum contributor to
+          Foundations, a JavaScript course that prepares absolute beginners for
+          an advanced programming bootcamp.
+        </p>
+      </div>
+      <div class="logos">
+        <img src="img/logos/480px-JavaScript-logo-min-edit.png" />
+        <img src="img/logos/1200px-HTML5_logo_and_wordmark.svg.png" />
+        <img src="img/logos/CSS3_logo_and_wordmark.svg.png" />
+      </div>
+    </section>
+    <section>
+      <div>
+        <img src="img/background_splash_bbq.jpg" style="border-radius: 20px;" />
+      </div>
+      <div>
+        <h4>Second Shift</h4>
+        <h5>
+          <a href="http://secondshiftmusic.com/catalog/"
+            >secondshiftmusic.com</a
+          >
+        </h5>
+        <p>
+          I played guitar and wrote songs in a rock band with my best friends
+          for about 10 years.
+        </p>
+        <p>I co-produced and engineered most of our self-made recordings.</p>
+      </div>
+    </section>
+    <section>
+      <p><a href="mailto:beau@beaunus.com">beau@beaunus.com</a></p>
+      <div class="logos">
+        <a href="https://github.com/beaunus">
+          <img src="img/logos/GitHub_Logo.png" />
+        </a>
+        <a href="https://www.linkedin.com/in/beaunus/">
+          <img src="img/logos/linkedin-logo-1.png" />
+        </a>
+      </div>
+    </section>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <script>
