--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           engineers for career advancement.
         </p>
         <p>
-          I am also a lead instructor and core curriculum contributor to
+          I am a lead instructor and core curriculum contributor to
           Foundations, a JavaScript course that prepares absolute beginners for
           an advanced programming bootcamp.
         </p>
