--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
           engineers for career advancement.
         </p>
         <p>
-          I am a lead instructor and core curriculum contributor to
-          Foundations, a JavaScript course that prepares absolute beginners for
-          an advanced programming bootcamp.
+          I am a lead instructor and core curriculum contributor to Foundations,
+          a JavaScript course that prepares absolute beginners for an advanced
+          programming bootcamp.
         </p>
       </div>
       <div class="logos">
