refactor: rename  and clean up logos

--- a/index.html
+++ b/index.html
@@ -56,20 +56,20 @@
         </p>
       </div>
       <div class="logos">
-        <img src="img/logos/591px-Node.js_logo_2015.svg.png" />
-        <img src="img/logos/TypeScript_Logo_(Blue).svg" />
-        <img src="img/logos/mongodb_logo1-76twgcu2dm.png" />
-        <img src="img/logos/ExpressJS (1).png" />
+        <img src="img/logos/node.png" />
+        <img src="img/logos/typescript.svg" />
+        <img src="img/logos/mongodb.png" />
+        <img src="img/logos/expressjs.png" />
         <img src="img/logos/react.png" />
-        <img src="img/logos/AngularJS-large.png" />
+        <img src="img/logos/angularjs.png" />
         <img src="img/logos/aws-ecs.png" />
-        <img src="img/logos/Redis_Logo.svg" />
-        <img src="img/logos/sentry-logo-black.png" />
+        <img src="img/logos/redis.svg" />
+        <img src="img/logos/sentry.png" />
       </div>
     </section>
     <section>
       <div>
-        <img src="img/logos/code-chrysalis-stickerB.png" />
+        <img src="img/logos/code-chrysalis.png" />
       </div>
       <div>
         <h4>Code Chrysalis</h4>
@@ -86,9 +86,9 @@
         </p>
       </div>
       <div class="logos">
-        <img src="img/logos/480px-JavaScript-logo-min-edit.png" />
-        <img src="img/logos/1200px-HTML5_logo_and_wordmark.svg.png" />
-        <img src="img/logos/CSS3_logo_and_wordmark.svg.png" />
+        <img src="img/logos/javascript.png" />
+        <img src="img/logos/html.png" />
+        <img src="img/logos/css.png" />
       </div>
     </section>
     <section>
@@ -113,10 +113,10 @@
       <p><a href="mailto:beau@beaunus.com">beau@beaunus.com</a></p>
       <div class="logos">
         <a href="https://github.com/beaunus">
-          <img src="img/logos/GitHub_Logo.png" />
+          <img src="img/logos/github.png" />
         </a>
         <a href="https://www.linkedin.com/in/beaunus/">
-          <img src="img/logos/linkedin-logo-1.png" />
+          <img src="img/logos/linkedin.png" />
         </a>
       </div>
     </section>
