--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
     </section>
     <section>
       <div>
+        <img src="img/logos/beaunussound.png" />
+      </div>
+      <div>
+        <h4>Beaunus Sound</h4>
+        <h5>
+          <a href="http://beaunussound.com/">beaunussound.com</a>
+        </h5>
+        <p>
+          I ran an audio production company for a few years.
+        </p>
+      </div>
+    </section>
+    <section>
+      <div>
         <img src="img/background_splash_bbq.jpg" style="border-radius: 20px;" />
       </div>
       <div>
