refactor: move styles from html to css

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </section>
     <section>
       <div>
-        <img src="img/background_splash_bbq.jpg" style="border-radius: 20px;" />
+        <img src="img/background_splash_bbq.jpg" class="rounded" />
       </div>
       <div>
         <h4>Second Shift</h4>
