feature: use aws logo

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <img src="img/logos/expressjs.png" />
         <img src="img/logos/react.png" />
         <img src="img/logos/angularjs.png" />
-        <img src="img/logos/aws-ecs.png" />
+        <img src="img/logos/aws.png" />
         <img src="img/logos/redis.svg" />
         <img src="img/logos/sentry.png" />
       </div>
