--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <img src="img/logos/node.png" />
         <img src="img/logos/typescript.svg" />
         <img src="img/logos/mongodb.png" />
-        <img src="img/logos/expressjs.png" />
+        <img src="img/logos/express.png" />
         <img src="img/logos/react.png" />
         <img src="img/logos/angularjs.png" />
         <img src="img/logos/aws.png" />
