--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet"
   />
   <link
-    href="lib/font-awesome-4.7.0/css/font-awesome.min.css"
+    href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
     rel="stylesheet"
   />
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -31,7 +31,7 @@
           <i aria-hidden="true" class="fa fa-code"></i><span>Code</span>
         </div>
         <div>
-          <i aria-hidden="true" class="fa fa-handshake-o"></i
+          <i aria-hidden="true" class="fa fa-handshake"></i
           ><span>Education</span>
         </div>
         <div>
