feature: add peace sign

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
       </div>
     </section>
     <section>
+      <i aria-hidden="true" class="far fa-hand-peace"></i>
       <p><a href="mailto:beau@beaunus.com">beau@beaunus.com</a></p>
       <div class="logos">
         <a href="https://github.com/beaunus">
