--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
       <h4>Software Engineer</h4>
       <div class="logos">
         <div>
-          <i aria-hidden="true" class="fa fa-code"></i><span>Code</span>
+          <i aria-hidden="true" class="fas fa-code"></i><span>Code</span>
         </div>
         <div>
-          <i aria-hidden="true" class="fa fa-handshake"></i
+          <i aria-hidden="true" class="far fa-handshake"></i
           ><span>Education</span>
         </div>
         <div>
-          <i aria-hidden="true" class="fa fa-music"></i><span>Music</span>
+          <i aria-hidden="true" class="fas fa-music"></i><span>Music</span>
         </div>
         <div>
-          <i aria-hidden="true" class="fa fa-headphones"></i
+          <i aria-hidden="true" class="fas fa-headphones-alt"></i
           ><span>Audio Engineering</span>
         </div>
       </div>
