feature: use terminal instead of code

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h4>Software Engineer</h4>
       <div class="logos">
         <div>
-          <i aria-hidden="true" class="fas fa-code"></i><span>Code</span>
+          <i aria-hidden="true" class="fas fa-terminal"></i><span>Code</span>
         </div>
         <div>
           <i aria-hidden="true" class="far fa-handshake"></i
