docs: change Zehitomo description to past tense.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h4>Zehitomo</h4>
         <h5><a href="https://www.zehitomo.com/">zehitomo.com</a></h5>
         <p>
-          I'm a full-stack developer at Zehitomo, a local services marketplace
+          I was a full-stack developer at Zehitomo, a local services marketplace
           that is enabling freelance professionals throughout Japan.
         </p>
       </div>
