--- a/index.html
+++ b/index.html
@@ -45,6 +45,34 @@
     </div>
     <section>
       <div>
+        <img src="img/logos/basal.png" class="rounded-border" />
+      </div>
+      <div>
+        <h4>Basal</h4>
+        <h5><a href="https://basal.dev/">basal.dev</a></h5>
+        <p>
+          I am a senior full-stack engineer and team lead at Basal, a software
+          development center based in Tokyo.
+        </p>
+      </div>
+      <div class="logos">
+        <img src="img/logos/typescript.svg" />
+        <img src="img/logos/node.png" />
+        <img src="img/logos/google-cloud-logo.svg" />
+        <img src="img/logos/mongodb.png" />
+        <img src="img/logos/express.png" />
+        <img src="img/logos/cypress-logo.webp" />
+        <img src="img/logos/jest.svg" />
+        <img src="img/logos/react.png" />
+        <img src="img/logos/webpack.png" />
+        <img src="img/logos/ant-design.svg" />
+        <img src="img/logos/ionicframework.png" />
+        <img src="img/logos/aws.png" />
+        <img src="img/logos/redis.svg" />
+      </div>
+    </section>
+    <section>
+      <div>
         <img src="img/zehitomo-iphone.png" />
       </div>
       <div>
@@ -118,9 +146,7 @@
         <h5>
           <a href="http://beaunussound.com/">beaunussound.com</a>
         </h5>
-        <p>
-          I ran an audio production company for a few years.
-        </p>
+        <p>I ran an audio production company for a few years.</p>
       </div>
     </section>
     <section>
@@ -138,11 +164,11 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <script>
-      !(function(e, a, t, n, g, c, o) {
+      !(function (e, a, t, n, g, c, o) {
         (e.GoogleAnalyticsObject = "ga"),
           (e.ga =
             e.ga ||
-            function() {
+            function () {
               (e.ga.q = e.ga.q || []).push(arguments);
             }),
           (e.ga.l = 1 * new Date()),
