refactor: add alt text to img tags

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
         </p>
       </div>
       <div class="logos">
-        <img src="img/logos/typescript.svg" />
-        <img src="img/logos/node.png" />
-        <img src="img/logos/google-cloud-logo.svg" />
-        <img src="img/logos/mongodb.png" />
-        <img src="img/logos/express.png" />
-        <img src="img/logos/cypress-logo.webp" />
-        <img src="img/logos/jest.svg" />
-        <img src="img/logos/react.png" />
-        <img src="img/logos/webpack.png" />
-        <img src="img/logos/ant-design.svg" />
-        <img src="img/logos/ionicframework.png" />
-        <img src="img/logos/aws.png" />
-        <img src="img/logos/redis.svg" />
+        <img src="img/logos/typescript.svg" alt="TypeScript"/>
+        <img src="img/logos/node.png" alt="NodeJS"/>
+        <img src="img/logos/google-cloud-logo.svg" alt="Google Cloud Platform"/>
+        <img src="img/logos/mongodb.png" alt="MongoDB"/>
+        <img src="img/logos/express.png" alt="ExpressJS"/>
+        <img src="img/logos/cypress-logo.webp" alt="Cypress"/>
+        <img src="img/logos/jest.svg" alt="Jest"/>
+        <img src="img/logos/react.png" alt="React"/>
+        <img src="img/logos/webpack.png" alt="Webpack"/>
+        <img src="img/logos/ant-design.svg" alt="Ant Design"/>
+        <img src="img/logos/ionicframework.png" alt="Ionic Framework"/>
+        <img src="img/logos/aws.png" alt="Amazon Web Services"/>
+        <img src="img/logos/redis.svg" alt="Redis"/>
       </div>
     </section>
     <section>
@@ -84,20 +84,20 @@
         </p>
       </div>
       <div class="logos">
-        <img src="img/logos/node.png" />
-        <img src="img/logos/typescript.svg" />
-        <img src="img/logos/mongodb.png" />
-        <img src="img/logos/express.png" />
-        <img src="img/logos/react.png" />
-        <img src="img/logos/angularjs.png" />
-        <img src="img/logos/aws.png" />
-        <img src="img/logos/redis.svg" />
-        <img src="img/logos/sentry.png" />
+        <img src="img/logos/node.png" alt="NodeJS"/>
+        <img src="img/logos/typescript.svg" alt="TypeScript"/>
+        <img src="img/logos/mongodb.png" alt="MongoDB"/>
+        <img src="img/logos/express.png" alt="ExpressJS"/>
+        <img src="img/logos/react.png" alt="React"/>
+        <img src="img/logos/angularjs.png" alt="AngularJS"/>
+        <img src="img/logos/aws.png" alt="Amazon Web Services"/>
+        <img src="img/logos/redis.svg" alt="Redis"/>
+        <img src="img/logos/sentry.png" alt="Sentry"/>
       </div>
     </section>
     <section>
       <div>
-        <img src="img/logos/code-chrysalis.png" />
+        <img src="img/logos/code-chrysalis.png" alt=""/>
       </div>
       <div>
         <h4>Code Chrysalis</h4>
@@ -114,9 +114,9 @@
         </p>
       </div>
       <div class="logos">
-        <img src="img/logos/javascript.png" />
-        <img src="img/logos/html.png" />
-        <img src="img/logos/css.png" />
+        <img src="img/logos/javascript.png" alt="JavaScript"/>
+        <img src="img/logos/html.png" alt="HTML"/>
+        <img src="img/logos/css.png" alt="CSS"/>
       </div>
     </section>
     <section>
