feature: add Scales and Modes

--- a/index.html
+++ b/index.html
@@ -183,6 +183,27 @@
       </div>
     </section>
     <section>
+      <div>
+        <a
+          href="https://unsplash.com/photos/S4eh9DWTId4?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink"
+        >
+          <img src="img/kelly-sikkema-S4eh9DWTId4-unsplash.jpg" />
+        </a>
+      </div>
+      <div>
+        <h4>Scales and Modes</h4>
+        <h5>
+          <a href="http://scales-and-modes.beaunus.com/"
+            >scales-and-modes.beaunus.com</a
+          >
+        </h5>
+        <p>
+          A WIP project to explore the tonality and <i>mood</i> of different
+          musical scales.
+        </p>
+      </div>
+    </section>
+    <section>
       <i aria-hidden="true" class="far fa-hand-peace"></i>
       <p><a href="mailto:beau@beaunus.com">beau@beaunus.com</a></p>
       <div class="logos">
