docs: update Code Chrysalis section to include CCP

--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
         <h4>Code Chrysalis</h4>
         <h5><a href="https://www.codechrysalis.io/">codechrysalis.io</a></h5>
         <p>
-          I am a lead instructor and curriculum owner for Job Leap, an
-          algorithms and system design course that prepares experienced software
-          engineers for career advancement.
+          I am an instructor for Immersive Part-time, an advanced JavaScript
+          course that trains engineers to become professional software
+          engineering leaders.
         </p>
         <p>
-          I am a lead instructor and core curriculum contributor to Foundations,
-          a JavaScript course that prepares absolute beginners for an advanced
-          programming bootcamp.
+          I am a lead instructor and core curriculum contributor for
+          Foundations, a JavaScript / HTML / CSS course that prepares absolute
+          beginners for an advanced programming bootcamp.
         </p>
       </div>
       <div class="logos">
