--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
       </div>
       <div class="logos">
         <img src="img/logos/javascript.png" alt="JavaScript" />
+        <img src="img/logos/express.png" alt="ExpressJS" />
+        <img src="img/logos/react.png" alt="React" />
         <img src="img/logos/html.png" alt="HTML" />
         <img src="img/logos/css.png" alt="CSS" />
       </div>
