feature: add GraphQL logo to Basal section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <div class="logos">
         <img src="img/logos/typescript.svg" alt="TypeScript" />
         <img src="img/logos/node.png" alt="NodeJS" />
+        <img src="img/logos/graph-ql.svg" alt="GraphQL" />
         <img
           src="img/logos/google-cloud-logo.svg"
           alt="Google Cloud Platform"
