--- a/index.html
+++ b/index.html
@@ -56,28 +56,49 @@
         </p>
       </div>
       <div class="logos">
-        <img src="img/logos/typescript.svg" alt="TypeScript" />
-        <img src="img/logos/node.png" alt="NodeJS" />
-        <img src="img/logos/graph-ql.svg" alt="GraphQL" />
+        <img
+          src="img/logos/typescript.svg"
+          alt="TypeScript"
+          title="TypeScript"
+        />
+        <img src="img/logos/node.png" alt="NodeJS" title="NodeJS" />
+        <img src="img/logos/graph-ql.svg" alt="GraphQL" title="GraphQL" />
         <img
           src="img/logos/google-cloud-logo.svg"
           alt="Google Cloud Platform"
+          title="Google Cloud Platform"
         />
-        <img src="img/logos/mongodb.png" alt="MongoDB" />
-        <img src="img/logos/express.png" alt="ExpressJS" />
-        <img src="img/logos/cypress-logo.webp" alt="Cypress" />
-        <img src="img/logos/jest.svg" alt="Jest" />
-        <img src="img/logos/react.png" alt="React" />
-        <img src="img/logos/webpack.png" alt="Webpack" />
-        <img src="img/logos/ant-design.svg" alt="Ant Design" />
-        <img src="img/logos/ionicframework.png" alt="Ionic Framework" />
-        <img src="img/logos/aws.png" alt="Amazon Web Services" />
-        <img src="img/logos/redis.svg" alt="Redis" />
+        <img src="img/logos/mongodb.png" alt="MongoDB" title="MongoDB" />
+        <img src="img/logos/express.png" alt="ExpressJS" title="ExpressJS" />
+        <img src="img/logos/cypress-logo.webp" alt="Cypress" title="Cypress" />
+        <img src="img/logos/jest.svg" alt="Jest" title="Jest" />
+        <img src="img/logos/react.png" alt="React" title="React" />
+        <img src="img/logos/webpack.png" alt="Webpack" title="Webpack" />
+        <img
+          src="img/logos/ant-design.svg"
+          alt="Ant Design"
+          title="Ant Design"
+        />
+        <img
+          src="img/logos/ionicframework.png"
+          alt="Ionic Framework"
+          title="Ionic Framework"
+        />
+        <img
+          src="img/logos/aws.png"
+          alt="Amazon Web Services"
+          title="Amazon Web Services"
+        />
+        <img src="img/logos/redis.svg" alt="Redis" title="Redis" />
       </div>
     </section>
     <section>
       <div>
-        <img src="img/logos/code-chrysalis.png" alt="" />
+        <img
+          src="img/logos/code-chrysalis.png"
+          alt="Code Chrysalis"
+          title="Code Chrysalis"
+        />
       </div>
       <div>
         <h4>Code Chrysalis</h4>
@@ -94,15 +115,15 @@
         </p>
       </div>
       <div class="logos">
-        <img src="img/logos/express.png" alt="ExpressJS" />
-        <img src="img/logos/react.png" alt="React" />
-        <img src="img/logos/html.png" alt="HTML" />
-        <img src="img/logos/css.png" alt="CSS" />
+        <img src="img/logos/express.png" alt="ExpressJS" title="ExpressJS" />
+        <img src="img/logos/react.png" alt="React" title="React" />
+        <img src="img/logos/html.png" alt="HTML" title="HTML" />
+        <img src="img/logos/css.png" alt="CSS" title="CSS" />
       </div>
     </section>
     <section>
       <div>
-        <img src="img/zehitomo-iphone.png" />
+        <img src="img/zehitomo-iphone.png" alt="Zehitomo" title="Zehitomo" />
       </div>
       <div>
         <h4>Zehitomo</h4>
@@ -113,15 +134,23 @@
         </p>
       </div>
       <div class="logos">
-        <img src="img/logos/node.png" alt="NodeJS" />
-        <img src="img/logos/typescript.svg" alt="TypeScript" />
-        <img src="img/logos/mongodb.png" alt="MongoDB" />
-        <img src="img/logos/express.png" alt="ExpressJS" />
-        <img src="img/logos/react.png" alt="React" />
-        <img src="img/logos/angularjs.png" alt="AngularJS" />
-        <img src="img/logos/aws.png" alt="Amazon Web Services" />
-        <img src="img/logos/redis.svg" alt="Redis" />
-        <img src="img/logos/sentry.png" alt="Sentry" />
+        <img src="img/logos/node.png" alt="NodeJS" title="NodeJS" />
+        <img
+          src="img/logos/typescript.svg"
+          alt="TypeScript"
+          title="TypeScript"
+        />
+        <img src="img/logos/mongodb.png" alt="MongoDB" title="MongoDB" />
+        <img src="img/logos/express.png" alt="ExpressJS" title="ExpressJS" />
+        <img src="img/logos/react.png" alt="React" title="React" />
+        <img src="img/logos/angularjs.png" alt="AngularJS" title="AngularJS" />
+        <img
+          src="img/logos/aws.png"
+          alt="Amazon Web Services"
+          title="Amazon Web Services"
+        />
+        <img src="img/logos/redis.svg" alt="Redis" title="Redis" />
+        <img src="img/logos/sentry.png" alt="Sentry" title="Sentry" />
       </div>
     </section>
     <section>
@@ -129,6 +158,7 @@
         <img
           src="img/logos/six-degrees-of-kevin-bacon.png"
           alt="Six Degrees of Kevin Bacon"
+          title="Six Degrees of Kevin Bacon"
           class="rounded-border"
         />
       </div>
@@ -147,16 +177,33 @@
         </p>
       </div>
       <div class="logos">
-        <img src="img/logos/typescript.svg" alt="TypeScript" />
-        <img src="img/logos/react.png" alt="React" />
-        <img src="img/logos/aws.png" alt="Amazon Web Services" />
-        <img src="img/logos/d3.svg" alt="D3.JS" />
-        <img src="img/logos/themoviedb.svg" alt="The Movie Database" />
+        <img
+          src="img/logos/typescript.svg"
+          alt="TypeScript"
+          title="TypeScript"
+        />
+        <img src="img/logos/react.png" alt="React" title="React" />
+        <img
+          src="img/logos/aws.png"
+          alt="Amazon Web Services"
+          title="Amazon Web Services"
+        />
+        <img src="img/logos/d3.svg" alt="D3.JS" title="D3.JS" />
+        <img
+          src="img/logos/themoviedb.svg"
+          alt="The Movie Database"
+          title="The Movie Database"
+        />
       </div>
     </section>
     <section>
       <div>
-        <img src="img/background_splash_bbq.jpg" class="rounded" />
+        <img
+          src="img/background_splash_bbq.jpg"
+          class="rounded"
+          title="Second Shift"
+          s
+        />
       </div>
       <div>
         <h4>Second Shift</h4>
@@ -174,7 +221,11 @@
     </section>
     <section>
       <div>
-        <img src="img/logos/beaunussound.png" />
+        <img
+          src="img/logos/beaunussound.png"
+          alt="Beaunus Sound"
+          title="Beaunus Sound"
+        />
       </div>
       <div>
         <h4>Beaunus Sound</h4>
@@ -189,7 +240,11 @@
         <a
           href="https://unsplash.com/photos/S4eh9DWTId4?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink"
         >
-          <img src="img/kelly-sikkema-S4eh9DWTId4-unsplash.jpg" />
+          <img
+            src="img/kelly-sikkema-S4eh9DWTId4-unsplash.jpg"
+            alt="Scales and Modes"
+            title="Scales and Modes"
+          />
         </a>
       </div>
       <div>
