feature: add Octopus section

--- a/index.html
+++ b/index.html
@@ -45,13 +45,87 @@
     </div>
     <section>
       <div>
+        <img
+          src="img/logos/octopus.jpeg"
+          class="rounded-border"
+          title="Octopus Energy"
+        />
+      </div>
+      <div>
+        <h4>Octopus Energy</h4>
+        <h5><a href="https://octopusenergy.co.jp/">octopusenergy.co.jp</a></h5>
+        <p>
+          I am a senior frontend develop at Octopus Energy, an energy company
+          that provides Japanese households with electricity from sustainable
+          sources.
+        </p>
+      </div>
+      <div class="logos">
+        <img
+          src="img/logos/typescript.svg"
+          alt="TypeScript"
+          title="TypeScript"
+        />
+        <img src="img/logos/node.png" alt="NodeJS" title="NodeJS" />
+        <img src="img/logos/graph-ql.svg" alt="GraphQL" title="GraphQL" />
+        <img src="img/logos/python.svg" alt="Python" title="Python" />
+        <img
+          src="img/logos/react-testing-library.png"
+          alt="React Testing Library"
+          title="React Testing Library"
+        />
+        <img src="img/logos/jest.svg" alt="Jest" title="Jest" />
+        <img src="img/logos/react.png" alt="React" title="React" />
+        <img src="img/logos/nextjs.svg" alt="Next.js" title="Next.js" />
+        <img
+          src="img/logos/tailwind-css.svg"
+          alt="Tailwind CSS"
+          title="Tailwind CSS"
+        />
+        <img src="img/logos/vercel.png" alt="Vercel" title="Vercel" />
+        <img src="img/logos/sentry.png" alt="Sentry" title="Sentry" />
+      </div>
+    </section>
+    <section>
+      <div>
+        <img
+          src="img/logos/code-chrysalis.png"
+          alt="Code Chrysalis"
+          title="Code Chrysalis"
+        />
+      </div>
+      <div>
+        <h4>Code Chrysalis</h4>
+        <h5><a href="https://www.codechrysalis.io/">codechrysalis.io</a></h5>
+        <p>
+          I am an instructor for Immersive Part-time, an advanced JavaScript
+          course that trains engineers to become professional software
+          engineering leaders.
+        </p>
+        <p>
+          I am a lead instructor and core curriculum contributor for
+          Foundations, a JavaScript / HTML / CSS course that prepares absolute
+          beginners for an advanced programming bootcamp.
+        </p>
+      </div>
+      <div class="logos">
+        <img src="img/logos/node.png" alt="NodeJS" title="NodeJS" />
+        <img src="img/logos/express.png" alt="ExpressJS" title="ExpressJS" />
+        <img src="img/logos/react.png" alt="React" title="React" />
+        <img src="img/logos/graph-ql.svg" alt="GraphQL" title="GraphQL" />
+        <img src="img/logos/html.png" alt="HTML" title="HTML" />
+        <img src="img/logos/css.png" alt="CSS" title="CSS" />
+      </div>
+    </section>
+    <section>
+      <div>
         <img src="img/logos/basal.png" class="rounded-border" />
       </div>
       <div>
         <h4>Basal</h4>
         <h5><a href="https://basal.dev/">basal.dev</a></h5>
         <p>
-          I am a senior full-stack engineer and team lead at Basal, a software
+          I was a senior full-stack engineer and team lead at Basal, a software
           development center based in Tokyo.
         </p>
       </div>
@@ -90,35 +164,6 @@
           title="Amazon Web Services"
         />
         <img src="img/logos/redis.svg" alt="Redis" title="Redis" />
-      </div>
-    </section>
-    <section>
-      <div>
-        <img
-          src="img/logos/code-chrysalis.png"
-          alt="Code Chrysalis"
-          title="Code Chrysalis"
-        />
-      </div>
-      <div>
-        <h4>Code Chrysalis</h4>
-        <h5><a href="https://www.codechrysalis.io/">codechrysalis.io</a></h5>
-        <p>
-          I am an instructor for Immersive Part-time, an advanced JavaScript
-          course that trains engineers to become professional software
-          engineering leaders.
-        </p>
-        <p>
-          I am a lead instructor and core curriculum contributor for
-          Foundations, a JavaScript / HTML / CSS course that prepares absolute
-          beginners for an advanced programming bootcamp.
-        </p>
-      </div>
-      <div class="logos">
-        <img src="img/logos/express.png" alt="ExpressJS" title="ExpressJS" />
-        <img src="img/logos/react.png" alt="React" title="React" />
-        <img src="img/logos/html.png" alt="HTML" title="HTML" />
-        <img src="img/logos/css.png" alt="CSS" title="CSS" />
       </div>
     </section>
     <section>
