--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h4>Octopus Energy</h4>
         <h5><a href="https://octopusenergy.co.jp/">octopusenergy.co.jp</a></h5>
         <p>
-          I am a senior frontend develop at Octopus Energy, an energy company
+          I am a senior frontend developer at Octopus Energy, an energy company
           that provides Japanese households with electricity from sustainable
           sources.
         </p>
