--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <meta charset="utf-8" />
   <meta content="ie=edge" http-equiv="x-ua-compatible" />
-  <title>Beaunus</title>
+  <title>Beaunus's Homepage</title>
   <meta content="" name="description" />
   <meta content="width=device-width,initial-scale=1" name="viewport" />
   <link href="apple-touch-icon.png" rel="apple-touch-icon" />
